# chessbench

./: .gitignore  .gitmodules  README.md  __init__.py  download_and_decode_lc0_data.py  download_syzygy_345.py  download_syzygy_6dtz.py  download_syzygy_6wdl.py  export_to_onnx.py  process_lc0_data.py  pyproject.toml  pyrightconfig.json  quick_fp16_profiler.py  requirements.txt  run_processing.sh  sharded_line_processor.py  test_processing.py
convert/: README.md  __init__.py  chunk_parser.py  convert.py  example.py  lc0_coder.py  utils.py
data/: download.sh
engine/: CMakeLists.txt  Makefile
engine/src/: main.cpp  options.hpp  syzygy_handler.cpp  syzygy_handler.hpp  syzygy_helpers.hpp  tokenizer.hpp
engine/src/parallel/: nn_evaluator.hpp  thread_pool.hpp
engine/src/poc/: async_pool.cpp  async_pool.hpp  demo.cpp  main_poc.cpp  nn_evaluator.cpp  nn_evaluator.hpp
engine/src/search/: fixed_depth_search.hpp  lks_node.hpp  lks_search.hpp  random_search.hpp  search_algo.hpp
engine/src/time/: fixed_time.cpp  fixed_time.hpp  stock_time_handler.hpp  time_handler.hpp  uci_time.hpp
engine/src/tools/: print_lks_node.cpp
gui/: package-lock.json  package.json  run_gui.sh
gui/public/: index.html
gui/src/: App.tsx
gui/src/components/: ChessBoard.tsx  ChessSearchEdge.tsx  ChessSearchNode.tsx  SearchTreeViewer.tsx
gui/src/types/: SearchLog.ts
gui/src/utils/: logParser.ts  moveUtils.ts  reactFlowUtils.ts
rust/: Cargo.toml  README.md
rust/chess-bindings/: Cargo.toml
rust/chess-bindings/src/: error.rs  lib.rs
rust/chess-bindings/src/engine/: lib.rs  mod.rs  node.rs  thread.rs  utils.rs
scripts/: export_onnx.py
src/: RoPE.txt  __init__.py  avs-8dim.txt  bagz.py  catgpt  catgpt2  config.py  constants.py  cudnn-attention.txt  data_loader.py  dataset.py  dense-attention-head-1.txt  dense-attention-head-16.txt  dense-attention-head-8.txt  dense-attention.txt  double-attend.txt  double-seq-8heads-take2.txt  double-seq-8heads.txt  double-seq.txt  fast_trans.txt  fen_analysis.py  flash.txt  generate_child_data.py  multi_head_attention.ipynb  new_trans.txt  new_trans_with_output.txt  no-dropout-take-3.txt  no-dropout-take6.txt  policy-adder.py  post_train.py  puzzles.py  pytorch_trans.txt  read_child_data.py  test.py  test2.py  test3.py  test_search_logging.py  testing.txt  tokenizer.py  torch_train.py  (+5 more)
src/engines/: constants.py  engine.py  inference_server.py  lc0_engine.py  minimax-dist.py  minimax.py  my_engine.py  neural_engines.py  remote_engine.py  search.py  stockfish_engine.py  strategy.py  uci_engine.py
src/engines/inference/: __init__.py  coordinator.py  manager.py  server.py
src/engines/search/: __init__.py  alpha_beta_search.py  alphabeta_worker.py  avs_search.py  base.py  example.py  mcts_search.py  mmmcts_search.py  mtdf_search.py  negamax_search.py  policy_search.py  pvs_search.py  selfplay.py  utils.py  value_search.py
src/engines/utils/: nnutils.py  node.py
src/models/: teacher.py  transformer.py
src/models/dense_attention/: danet_layers.py  dense_attention.py  expanded_ffn.py  legacy_layers.py  model_config.py  positional_embeddings.py
src/rust_chess/: __init__.py  example.py
tests/: __init__.py  test_invariance.py
