[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_chess"
version = "0.1.0"
description = "Chess engine with Rust bindings"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chess",
]

[tool.maturin]
module-name = "rust_chess.chess_bindings"
python-source = "src"
features = ["pyo3/extension-module"]
manifest-path = "rust/chess-bindings/Cargo.toml" 