[project]
name = "rust_chess"
version = "0.1.0"
description = "Chess engine with Rust bindings"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chess",
]