[package]
name = "chess-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Chess Engine Team"]
description = "Python bindings for the chess engine"

[lib]
name = "chess_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "abi3-py38"] } 
numpy = "0.24.0"
shakmaty = "0.27.3"  # Chess move generation and validation
thiserror = "2.0.12" # Unified error handling
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
parking_lot = "0.12.3"
async-channel = "2.3.1"
once_cell = "1.19.0"